syntax = "proto3";
package krankenakte;

service KrankenakteService {
    rpc getKrankenakte(User) returns (Krankenakte) {}
    rpc updatePatientenakte(Patientenakte) returns (Status) {}
}

message Status{
    string status = 1;
    string message = 2;
}

message User {
    string user_id = 1;
}

message Krankenakte {
    string user_id = 1;
    repeated Patientenakte = 2;
}

message Patientenakte {
    string patientenakte_id = 1;
    string user_id = 2;
    string datum = 3;
    string anamnese = 4;
    string symptome = 5;
    string diagnose = 6;
    string medikation = 7;
    string psychisch_krank = 8;
    string sonstiges = 9;
}